Refactoring UserService and UserResource

--- a/.env.dev
+++ b/.env.dev
@@ -1,5 +1,6 @@
 APP_ENV=dev
-
+APP_HOST=localhost
+APP_SCHEMES=http
 ###> symfony/framework-bundle ###
 APP_SECRET=
 ###< symfony/framework-bundle ###
